<resources>
    <string name="app_name">EzRent</string>
    <string name="title_activity_post">Post</string>

    <!--string for Post activity -->

    <string name="price">Price</string>
    <string name="price_hint">123.00</string>
    <string name="location">Location</string>
    <string name="location_hint">PV10 Block A</string>
    <string name="room_type">Room Type</string>
    <string name="room_type_hint">Master Room</string>
    <string name="facilities">Facilities</string>
    <string name="Accessibility">Accessibility</string>
    <string name="Feedback">Feedback</string>
    <string name="Interested">Interested ?</string>

    <!-- string for profile -->
    <string name="photo">photo</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phoneNo">Phone No.</string>
    <string name="about_me">About Me</string>
    <string name="update">Update</string>
</resources>
